# letta-city-sim

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile.bundle  Makefile  README.md  TESTING.md  docker-compose.bundle.yml  docker-compose.yml  railway.toml  test.md
.letta/: settings.json  settings.local.json
docs/: citizen-harness-design.md  (+4 more)
world-api/: Cargo.toml  Dockerfile
world-api/migrations/: 0001_init.sql  0002_agent_economy_vitals.sql  0003_inventory_quantity.sql  0004_agent_intentions.sql  0005_jobs.sql  0006_agent_tokens.sql  0007_citizen_harness.sql  0008_conversation_participant_status.sql  0009_economy_transactions.sql  0010_conversation_participant_left.sql  0011_shop_items.sql  0012_job_system.sql  0013_civic_system.sql  0014_hygiene_system.sql  0015_shops.sql  0016_time_of_day.sql  0017_bank_sector.sql  0018_location_roles.sql  0019_agent_applications.sql  0020_citizen_wake_claims.sql  0020_construction.sql  0021_event_routing.sql  0022_blocking_movement.sql
world-api/src/: auth.rs  error.rs  heartbeat.rs  main.rs  state.rs  ws_events.rs
world-api/src/models/: agent.rs  application.rs  board.rs  common.rs  construction.rs  conversation.rs  event.rs  intention.rs  inventory.rs  job.rs  location.rs  mod.rs  object.rs  pathfind.rs  world.rs
world-api/src/routes/: actions.rs  agents.rs  applications.rs  banking.rs  board.rs  citizens.rs  construction.rs  conversations.rs  economy.rs  events.rs  intentions.rs  inventory.rs  jobs.rs  locations.rs  mod.rs  objects.rs  pathfind.rs  pulse.rs  sleep.rs  tokens.rs  vitals.rs  world.rs
(+119 files in other folders)
